Дополняет паддингами и марджинами

--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet">
     <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css">
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 
@@ -49,7 +48,7 @@
     
       <!--Преимущества-->
 
-  <section class="section">
+  <section class="conteiner">
      <!--<h2 class="section-title">Преимущества студии</h2>   -->
     <ul class="feature-list">
       <li>
@@ -73,8 +72,8 @@
 
     <!--Сфера деятельности-->
 
-  <section class="section">
-      <h2 class="section-title">Чем мы занимаемся</h2>
+  <section class="conteiner">
+      <h2 class="section-title-work">Чем мы занимаемся</h2>
       <ul class="work-list">
           <li>
             <img src="./images/index/img1.png" alt="Рабочий стол с компьютером" width="370">
@@ -92,8 +91,8 @@
 
   <!--Команда-->
 
-  <section class="section">
-    <h2 class="section-title">Наша команда</h2>
+  <section class="conteiner section">
+    <h2 class="section-title-team">Наша команда</h2>
       <ul  class="team-list">
         <li>
           <h3 class="team-subtitle">Игорь Демьяненко</h3>
@@ -122,6 +121,7 @@
     <!--Футер-->
 
     <footer>
+      <div class="conteiner">
       <a lang="en" href="./index.html" class="logo-part"><span class="logo-text">Web</span>Studio</a>
         <address class="address">
             <p class="address-text"> г. Киев, пр-т Леси Украинки, 26</p>
@@ -130,6 +130,7 @@
             <li><a class="address-link" href="tel:+380991111111">+38 099 111 11 11</a>
             </ul>
         </address>
+      </div>
     </footer>
 </body>
 </html>
