--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <main>
   <section class="hero">
     <div class="conteiner ">
-    <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+    <h1 class="hero-title">Эффективные решения</br> для вашего бизнеса</h1>
     <button type="button" class="button">Заказать услугу</button>
     </div>
   </section>
@@ -54,19 +54,19 @@
   <section class="conteiner">
      <!--<h2 class="section-title">Преимущества студии</h2>   -->
     <ul class="feature-list">
-      <li>
+      <li class="feature-list-item">
         <h3 class="title">Внимание к деталям</h3>
         <p class="feature-list-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
       </li>
-      <li>
+      <li class="feature-list-item">
         <h3 class="title">Пунктуальность</h3>
         <p class="feature-list-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-      </li>
-      <li>
+      </li class="feature-list-item">
+      <li class="feature-list-item">
         <h3 class="title">Планирование</h3>
         <p class="feature-list-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
       </li>
-      <li>
+      <li class="feature-list-item">
         <h3 class="title">Современные технологии</h3>
         <p class="feature-list-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
       </li>
@@ -78,53 +78,62 @@
   <section class="conteiner">
       <h2 class="section-title-work">Чем мы занимаемся</h2>
       <ul class="work-list">
-          <li>
+          <li class="work-item">
             <img src="./images/index/img1.png" alt="Рабочий стол с компьютером" width="370">
           </li>
-          <li>
+          <li class="work-item">
             <a href="">
               <img src="./images/index/img2.png" alt="Рабочий стол с телефоном" width="370">
             </a>
-          </li>
-          <li>
+          </li class="work-item">
+          <li class="work-item">
             <img src="./images/index/img3.png" alt="Рабочий стол с планшетом" width="370">
           </li>
       </ul>
   </section>
 
   <!--Команда-->
-
+  <div class="section-box">
   <section class="conteiner section">
     <h2 class="section-title-team">Наша команда</h2>
       <ul  class="team-list">
-        <li>
+        <li class="list-item">
+          <img src="./images/index/k1.jpg" alt="фото Игоря" width="270">
+          <div class="team-box">
           <h3 class="team-subtitle">Игорь Демьяненко</h3>
-            <p class="team-subtitle-text">Product Designer</p>
-              <img src="./images/index/k1.jpg" alt="фото Игоря" width="270">
+          <p class="team-subtitle-text">Product Designer</p>    
+          </div>
         </li>
-        <li>
+        <li class="list-item">
+          <img src="./images/index/k2.jpg" alt="фото Ольги" width="270">
+          <div class="team-box">
           <h3 class="team-subtitle">Ольга Репина</h3>
-            <p class="team-subtitle-text">Frontend Developer</p>
-              <img src="./images/index/k2.jpg" alt="фото Ольги" width="270">
+          <p class="team-subtitle-text">Frontend Developer</p>
+          </div>
         </li>
-        <li>
+        <li class="list-item">
+          <img src="./images/index/k3.jpg" alt="фото Николая" width="270">
+          <div class="team-box">
           <h3 class="team-subtitle">Николай Тарасов</h3>
-            <p class="team-subtitle-text">Marketing</p>
-              <img src="./images/index/k3.jpg" alt="фото Николая" width="270">
+          <p class="team-subtitle-text">Marketing</p>
+          </div>
         </li>
-        <li>
+        <li class="list-item">
+          <img src="./images/index/k4.jpg" alt="фото Михаила" width="270">
+          <div class="team-box">
           <h3 class="team-subtitle">Михаил Ермаков</h3>
-            <p class="team-subtitle-text">UI Designer</p>
-              <img src="./images/index/k4.jpg" alt="фото Михаила" width="270">
+          <p class="team-subtitle-text">UI Designer</p>
+          </div>
         </li>
-      </ul>    
+      </ul> 
+  </div>
   </section>
   </main>
     
     <!--Футер-->
 
     <footer>
-      <div class="conteiner">
+      <div class="conteiner ">
       <a lang="en" href="./index.html" class="logo-part"><span class="logo-text">Web</span>Studio</a>
         <address class="address">
             <p class="address-text"> г. Киев, пр-т Леси Украинки, 26</p>
