--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <!--Сфера деятельности-->
 
-  <section class="conteiner">
+  <section class="conteiner work">
       <h2 class="section-title-work">Чем мы занимаемся</h2>
       <ul class="work-list">
           <li class="work-item">
@@ -93,8 +93,9 @@
   </section>
 
   <!--Команда-->
-  <div class="section-box">
-  <section class="conteiner section">
+
+  <section class="team-section">
+    <div class="conteiner">
     <h2 class="section-title-team">Наша команда</h2>
       <ul  class="team-list">
         <li class="list-item">
@@ -126,7 +127,7 @@
           </div>
         </li>
       </ul> 
-  </div>
+      </div>
   </section>
   </main>
     
