--- a/portfolio.html
+++ b/portfolio.html
@@ -42,8 +42,7 @@
 
     <main>
     <section class="conteiner main-projects">
-        <!-- <h1> Область проекта </h1> -->
-        
+        <!-- <h1> Область проекта </h1> --> 
         <!-- Фильтр -->
       <ul class="button-list">
         <li class="button-item"><button type="button" class="button-text">Все</button></li>
@@ -53,71 +52,88 @@
         <li class="button-item"><button type="button" class="button-text">Маркетинг</button></li>
       </ul>
     
-
     <!-- Проекты -->
 
       <ul class="projects-list">
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img.jpg" alt="ноутбук" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Технокряк</h2>
             <p class="projects-text">Веб-сайт</p>
+            </div>
         </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img1.jpg" alt="баскетболисты" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Постер New Orlean vs Golden Star</h2>
             <p class="projects-text">Дизайн</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img2.jpg" alt="логотип ресторана" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Ресторан Seafood</h2>
             <p class="projects-text">Приложение</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img3.jpg" alt="наушники" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Проект Prime</h2>
             <p class="projects-text">Маркетинг</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img4.jpg" alt="два короба" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Проект Boxes</h2>
             <p class="projects-text">Приложение</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img5.jpg" alt="монитор" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Inspiration has no Borders</h2>
             <p class="projects-text">Веб-сайт</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img6.jpg" alt="книга" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Издание Limited Edition</h2>
             <p class="projects-text">Дизайн</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img7.jpg" alt="ярлык с ниткой" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title"> Проект LAB</h2>
             <p class="projects-text">Маркетинг</p>
+            </div>
             </a>
         </li>
         <li class="projects-item">
             <a href="#" class="projects-link">
             <img src="./images/portfolio/img8.jpg" alt="ноутбук" width="370">
+            <div class="project-subtitle">
             <h2 class="projects-title">Growing Business</h2>
             <p class="projects-text">Приложение</p>
+            </div>
             </a>
         </li>
       </ul>
